<resources>
    <string name="app_name">Sign in</string>
    <string name="buttonText">Lecture</string>
    <string name="TxtView">Lecture</string>
    <string name="Buttonhome">Home</string>
    <string name="buttonstudent">Student</string>
    <string name="buttonstudenth">Home</string>
    <string name="title_activity_login">Student &amp; Lecture</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="buttonsignin">Sign In</string>
    <string name="buttonsignout">Sign Out</string>
</resources>
