<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.john_.studentlecture.MainActivity">

    <RelativeLayout
        android:layout_width="374dp"
        android:layout_height="507dp"
        android:background="@color/colorPrimary"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="2dp">

        <Button
            android:id="@+id/buttonlecture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:text="@string/buttonText"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="28dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/buttonstudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="107dp"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:elevation="0dp"
            android:text="@string/buttonstudent"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="123dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/buttonlogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/buttonsignout"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
